# fullstack_angular_fastapi

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: authorization_header_elements.py  config.py  custom_exceptions.py  dependencies.py  json_web_token.py  main.py
frontend/: .gitignore  angular.json  package-lock.json  package.json  set-env.ts
frontend/src/: index.html  main.ts
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/models/: api-response.model.ts  app-error.model.ts  auth0-resource.model.ts  index.ts  message.model.ts  request-config.model.ts  user-profile.model.ts
frontend/src/app/core/services/: external-api.service.ts  index.ts  message.service.ts
frontend/src/app/features/admin/: admin.component.html  admin.component.ts
frontend/src/app/features/callback/: callback.component.html  callback.component.ts
frontend/src/app/features/home/: home.component.html  home.component.ts
frontend/src/app/features/not-found/: not-found.component.html  not-found.component.ts
frontend/src/app/features/profile/: profile.component.html  profile.component.ts
frontend/src/app/features/protected/: protected.component.html  protected.component.ts
frontend/src/app/features/public/: public.component.html  public.component.ts
frontend/src/app/shared/: shared.module.ts
frontend/src/app/shared/components/: index.ts  (+8 more)
frontend/src/styles/: styles.scss
frontend/src/styles/components/: angular.scss  code-snippet.scss  index.scss  mobile-nav-bar.scss  nav-bar.scss  page-footer.scss
(+22 files in other folders)
