[project]
name = "backend"
version = "0.1.0"
description = "https://developer.auth0.com/resources/code-samples/full-stack/hello-world/basic-role-based-access-control/spa/angular-typescript/fastapi-python"
authors = [{name = "David Miller", email = "mithegooie@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
backend = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
fastapi = ">=0.111.0,<0.112"
pydantic = {version = ">=2.7.1", extras = ["email"]}
pydantic-settings = ">=2.3.0,<2.4"
pyjwt = {version = ">=2.8.0", extras = ["cryptography"]}
sqlalchemy = ">=2.0.30,<2.1"
pytest = ">=8.2.1,<8.3"
authlib = ">=1.3.0,<1.4"
itsdangerous = ">=2.2.0,<2.3"
loguru = ">=0.7.2,<0.8"
asyncpg = ">=0.29.0,<0.30"
passlib = {version=">=1.7.4", extras = ["bcrypt"]}
alembic = ">=1.13.1,<1.14"
secure = ">=0.3.0,<0.4"
python-dotenv = ">=1.0.1,<1.1"
psycopg2 = ">=2.9.9,<2.10"
